crates/tests/tools/header2rdl/tests/include/um/urlmon.h

typedef interface IBindStatusCallback IBindStatusCallback;
                                                     
STDAPI MkParseDisplayNameEx(_In_ IBindCtx *pbc, _In_ LPCWSTR szDisplayName, _Out_ _Out_range_(<=, _String_length_(szDisplayName)) ULONG *pchEaten,          
                                _Outptr_ LPMONIKER *ppmk);
                                           
STDAPI RegisterBindStatusCallback(_In_ LPBC pBC, _In_ IBindStatusCallback *pBSCb,                     
                                _Outptr_ IBindStatusCallback**  ppBSCBPrev, DWORD dwReserved);
       
STDAPI RevokeBindStatusCallback(_In_ LPBC pBC, _In_ IBindStatusCallback *pBSCb);
 
STDAPI IsValidURL(_In_opt_ LPBC pBC, _In_ LPCWSTR szURL, DWORD dwReserved);
STDAPI IEInstallScope(_Out_ LPDWORD pdwScope);
 
//helper apis                                                                               
STDAPI IsAsyncMoniker(_In_ IMoniker* pmk);
 
STDAPI RegisterMediaTypes(_In_ _In_range_(>, 0) UINT ctypes, _In_reads_(ctypes) const LPCSTR* rgszTypes, _Out_writes_(ctypes) CLIPFORMAT* rgcfTypes);
 
STDAPI RegisterFormatEnumerator(_In_ LPBC pBC, _In_ IEnumFORMATETC *pEFetc, DWORD reserved);
          
STDAPI RevokeFormatEnumerator(_In_ LPBC pBC, _In_ IEnumFORMATETC *pEFetc);
                            
STDAPI RegisterMediaTypeClass(_In_ LPBC pBC, _In_ _In_range_(>, 0) UINT ctypes, _In_reads_(ctypes) const LPCSTR* rgszTypes, _In_reads_(ctypes)  CLSID *rgclsID, DWORD reserved);
STDAPI UrlMkSetSessionOption(DWORD dwOption, _In_reads_bytes_opt_(dwBufferLength) LPVOID pBuffer, DWORD dwBufferLength, _Reserved_ DWORD dwReserved);
       
STDAPI UrlMkGetSessionOption(DWORD dwOption, _Out_writes_bytes_to_opt_(dwBufferLength,*pdwBufferLengthOut) LPVOID pBuffer, DWORD dwBufferLength, _Out_ DWORD *pdwBufferLengthOut, _Reserved_ DWORD dwReserved);
STDAPI ObtainUserAgentString(                           
                                         DWORD dwOption, 
    _Out_writes_to_(*cbSize, *cbSize)    LPSTR pszUAOut, 
    _Inout_                              DWORD *cbSize);
// Enhanced Protected Mode (EPM) Convenience Functions
 
typedef enum IEObjectType
{
    IE_EPM_OBJECT_EVENT,
    IE_EPM_OBJECT_MUTEX,
    IE_EPM_OBJECT_SEMAPHORE,
    IE_EPM_OBJECT_SHARED_MEMORY,
    IE_EPM_OBJECT_WAITABLE_TIMER,
    IE_EPM_OBJECT_FILE,
    IE_EPM_OBJECT_NAMED_PIPE,
    IE_EPM_OBJECT_REGISTRY,
} IEObjectType;
 
STDAPI SetAccessForIEAppContainer(
    _In_ HANDLE hObject,
    _In_ IEObjectType ieObjectType,
    _In_ DWORD dwAccessMask
    );
/* interface IBindStatusCallback */
/* [unique][uuid][object] */ 

typedef /* [unique] */  __RPC_unique_pointer IBindStatusCallback *LPBINDSTATUSCALLBACK;
typedef struct _tagBINDINFO
    {
    ULONG cbSize;
    LPWSTR szExtraInfo;
    STGMEDIUM stgmedData;
    DWORD grfBindInfoF;
    DWORD dwBindVerb;
    LPWSTR szCustomVerb;
    DWORD cbstgmedData;
    DWORD dwOptions;
    DWORD dwOptionsFlags;
    DWORD dwCodePage;
    SECURITY_ATTRIBUTES securityAttributes;
    IID iid;
    IUnknown *pUnk;
    DWORD dwReserved;
    } 	BINDINFO;
                                                                                                           
                                                                                                           
struct IBindStatusCallback;
                                                                                
STDAPI HlinkSimpleNavigateToString(                                                                        
    _In_opt_ LPCWSTR szTarget,         // required - target document - null if local jump w/in doc       
    _In_opt_ LPCWSTR szLocation,       // optional, for navigation into middle of a doc                  
    _In_opt_ LPCWSTR szTargetFrameName,// optional, for targeting frame-sets                             
    _In_     IUnknown *pUnk,           // required - we'll search this for other necessary interfaces    
    _In_opt_ IBindCtx *pbc,            // optional. caller may register an IBSC in this                  
    _In_opt_ IBindStatusCallback *,                                                                      
    /* [in] */ DWORD grfHLNF,            // flags                                                          
    /* [in] */ DWORD dwReserved          // for future use, must be NULL                                   
);
                                                                                                         
                                                                                                           
STDAPI HlinkSimpleNavigateToMoniker(                                                                       
    _In_opt_ IMoniker *pmkTarget,      // required - target document - (may be null                      
    _In_opt_ LPCWSTR szLocation,       // optional, for navigation into middle of a doc                  
    _In_opt_ LPCWSTR szTargetFrameName,// optional, for targeting frame-sets                             
    _In_opt_ IUnknown *pUnk,           // required - we'll search this for other necessary interfaces    
    _In_opt_ IBindCtx *pbc,            // optional. caller may register an IBSC in this                  
    _In_opt_ IBindStatusCallback *,                                                                      
    /* [in] */ DWORD grfHLNF,            // flags                                                          
    /* [in] */ DWORD dwReserved          // for future use, must be NULL                                   
);
                                                                                                         
                                                                                                           
STDAPI URLOpenStreamA(_In_opt_ LPUNKNOWN, _In_ LPCSTR,DWORD, _In_opt_ LPBINDSTATUSCALLBACK);
                                        
STDAPI URLOpenStreamW(_In_opt_ LPUNKNOWN, _In_ LPCWSTR,DWORD,_In_opt_ LPBINDSTATUSCALLBACK);
                                       
STDAPI URLOpenPullStreamA(_In_opt_ LPUNKNOWN, _In_ LPCSTR,DWORD, _In_opt_ LPBINDSTATUSCALLBACK);
                                    
STDAPI URLOpenPullStreamW(_In_opt_ LPUNKNOWN,_In_ LPCWSTR,DWORD, _In_opt_ LPBINDSTATUSCALLBACK);
                                   
STDAPI URLDownloadToFileA(_In_opt_ LPUNKNOWN, _In_ LPCSTR, _In_opt_ LPCSTR,DWORD, _In_opt_ LPBINDSTATUSCALLBACK);
                             
STDAPI URLDownloadToFileW(_In_opt_ LPUNKNOWN, _In_ LPCWSTR,_In_opt_ LPCWSTR,DWORD, _In_opt_ LPBINDSTATUSCALLBACK);
                           
STDAPI URLDownloadToCacheFileA(_In_opt_ LPUNKNOWN, _In_ LPCSTR,  _Out_writes_(cchFileName) LPSTR,  DWORD cchFileName, DWORD, _In_opt_ LPBINDSTATUSCALLBACK);
STDAPI URLDownloadToCacheFileW(_In_opt_ LPUNKNOWN, _In_ LPCWSTR, _Out_writes_(cchFileName) LPWSTR, DWORD cchFileName, DWORD, _In_opt_ LPBINDSTATUSCALLBACK);
STDAPI URLOpenBlockingStreamA(_In_opt_ LPUNKNOWN, _In_ LPCSTR, _Outptr_ LPSTREAM*,DWORD, _In_opt_ LPBINDSTATUSCALLBACK);
                      
STDAPI URLOpenBlockingStreamW(_In_opt_ LPUNKNOWN, _In_ LPCWSTR, _Outptr_ LPSTREAM*,DWORD, _In_opt_ LPBINDSTATUSCALLBACK);
                                                                   
STDAPI HlinkGoForward(_In_ IUnknown *pUnk);
                                                                
STDAPI HlinkNavigateString(_In_opt_ IUnknown *pUnk, _In_opt_ LPCWSTR szTarget);
                            
STDAPI HlinkNavigateMoniker(_In_opt_ IUnknown *pUnk, _In_opt_ IMoniker *pmkTarget);
 
STDAPI_(void) ReleaseBindInfo( _Inout_ BINDINFO * pbindinfo );
// Do not take a dependency on the exact value of the private namespace, no guarantee is given that it won't change.
STDAPI_(PWSTR) IEGetUserPrivateNamespaceName(void);
STDAPI SetSoftwareUpdateAdvertisementState( LPCWSTR szDistUnit, DWORD dwAdState, DWORD dwAdvertisedVersionMS, DWORD dwAdvertisedVersionLS );
// Logging-specific apis
BOOL WINAPI IsLoggingEnabledA(_In_ LPCSTR  pszUrl);
                    
BOOL WINAPI IsLoggingEnabledW(_In_ LPCWSTR  pwszUrl);
typedef struct _tagHIT_LOGGING_INFO
    {
    DWORD dwStructSize;
    LPSTR lpszLoggedUrlName;
    SYSTEMTIME StartTime;
    SYSTEMTIME EndTime;
    LPSTR lpszExtendedInfo;
    } 	HIT_LOGGING_INFO;
typedef struct _tagHIT_LOGGING_INFO *LPHIT_LOGGING_INFO;
BOOL WINAPI WriteHitLogging(_In_ LPHIT_LOGGING_INFO lpLogginginfo);