crates/deps/sys/src/Windows/Win32/System/Com/Urlmon/mod.rs

    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn HlinkGoForward(punk: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn HlinkNavigateMoniker(punk: ::windows::runtime::RawPtr, pmktarget: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn HlinkNavigateString(punk: ::windows::runtime::RawPtr, sztarget: super::super::super::Foundation::PWSTR) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn HlinkSimpleNavigateToMoniker(pmktarget: ::windows::runtime::RawPtr, szlocation: super::super::super::Foundation::PWSTR, sztargetframename: super::super::super::Foundation::PWSTR, punk: ::windows::runtime::RawPtr, pbc: ::windows::runtime::RawPtr, param5: ::windows::runtime::RawPtr, grfhlnf: u32, dwreserved: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn HlinkSimpleNavigateToString(sztarget: super::super::super::Foundation::PWSTR, szlocation: super::super::super::Foundation::PWSTR, sztargetframename: super::super::super::Foundation::PWSTR, punk: ::windows::runtime::RawPtr, pbc: ::windows::runtime::RawPtr, param5: ::windows::runtime::RawPtr, grfhlnf: u32, dwreserved: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn IEGetUserPrivateNamespaceName() -> super::super::super::Foundation::PWSTR;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn IEInstallScope(pdwscope: *mut u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn IsAsyncMoniker(pmk: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn IsLoggingEnabledA(pszurl: super::super::super::Foundation::PSTR) -> super::super::super::Foundation::BOOL;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn IsLoggingEnabledW(pwszurl: super::super::super::Foundation::PWSTR) -> super::super::super::Foundation::BOOL;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn IsValidURL(pbc: ::windows::runtime::RawPtr, szurl: super::super::super::Foundation::PWSTR, dwreserved: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn MkParseDisplayNameEx(pbc: ::windows::runtime::RawPtr, szdisplayname: super::super::super::Foundation::PWSTR, pcheaten: *mut u32, ppmk: *mut ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn ObtainUserAgentString(dwoption: u32, pszuaout: super::super::super::Foundation::PSTR, cbsize: *mut u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn RegisterBindStatusCallback(pbc: ::windows::runtime::RawPtr, pbscb: ::windows::runtime::RawPtr, ppbscbprev: *mut ::windows::runtime::RawPtr, dwreserved: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn RegisterFormatEnumerator(pbc: ::windows::runtime::RawPtr, pefetc: ::windows::runtime::RawPtr, reserved: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn RegisterMediaTypeClass(pbc: ::windows::runtime::RawPtr, ctypes: u32, rgsztypes: *const super::super::super::Foundation::PSTR, rgclsid: *const ::windows::runtime::GUID, reserved: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn RegisterMediaTypes(ctypes: u32, rgsztypes: *const super::super::super::Foundation::PSTR, rgcftypes: *mut u16) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`, `Win32_Graphics_Gdi`, `Win32_Security`, `Win32_System_Com_StructuredStorage`*"]
    #[cfg(all(feature = "Win32_Foundation", feature = "Win32_Graphics_Gdi", feature = "Win32_Security", feature = "Win32_System_Com_StructuredStorage"))]
    pub fn ReleaseBindInfo(pbindinfo: *mut ::core::mem::ManuallyDrop<super::BINDINFO>);
    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn RevokeBindStatusCallback(pbc: ::windows::runtime::RawPtr, pbscb: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn RevokeFormatEnumerator(pbc: ::windows::runtime::RawPtr, pefetc: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn SetAccessForIEAppContainer(hobject: super::super::super::Foundation::HANDLE, ieobjecttype: IEObjectType, dwaccessmask: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn SetSoftwareUpdateAdvertisementState(szdistunit: super::super::super::Foundation::PWSTR, dwadstate: u32, dwadvertisedversionms: u32, dwadvertisedversionls: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLDownloadToCacheFileA(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PSTR, param2: super::super::super::Foundation::PSTR, cchfilename: u32, param4: u32, param5: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLDownloadToCacheFileW(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PWSTR, param2: super::super::super::Foundation::PWSTR, cchfilename: u32, param4: u32, param5: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLDownloadToFileA(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PSTR, param2: super::super::super::Foundation::PSTR, param3: u32, param4: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLDownloadToFileW(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PWSTR, param2: super::super::super::Foundation::PWSTR, param3: u32, param4: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLOpenBlockingStreamA(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PSTR, param2: *mut ::windows::runtime::RawPtr, param3: u32, param4: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLOpenBlockingStreamW(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PWSTR, param2: *mut ::windows::runtime::RawPtr, param3: u32, param4: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLOpenPullStreamA(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PSTR, param2: u32, param3: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLOpenPullStreamW(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PWSTR, param2: u32, param3: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLOpenStreamA(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PSTR, param2: u32, param3: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn URLOpenStreamW(param0: ::windows::runtime::RawPtr, param1: super::super::super::Foundation::PWSTR, param2: u32, param3: ::windows::runtime::RawPtr) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn UrlMkGetSessionOption(dwoption: u32, pbuffer: *mut ::core::ffi::c_void, dwbufferlength: u32, pdwbufferlengthout: *mut u32, dwreserved: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`*"]
    pub fn UrlMkSetSessionOption(dwoption: u32, pbuffer: *const ::core::ffi::c_void, dwbufferlength: u32, dwreserved: u32) -> ::windows::runtime::HRESULT;
    #[doc = "*Required features: `Win32_System_Com_Urlmon`, `Win32_Foundation`*"]
    #[cfg(feature = "Win32_Foundation")]
    pub fn WriteHitLogging(lplogginginfo: *const HIT_LOGGING_INFO) -> super::super::super::Foundation::BOOL;
}
